<resources>
    <string name="app_name">SimonIlic-pset2</string>
    <string name="welcome_string">
        This is a mad libs game. The goal is to create a story together. Please follow my
        instructions in the next screen. Simply fill in the requested words and
        hopefully a funny story will be the result!
    </string>
    <string name="word_count">%1$d word(s) to go!</string>
    <string name="inputText_hint">%1$s</string>
    <string name="extra_hint">Type in a/an %1$s</string>
    <string name="story">%1$s</string>
    <string name="restart_button">Make another story</string>
    <string name="begin_button_text">Begin</string>
    <string name="instructions">Fill in the requested words below to complete the Story!</string>
    <string name="present_story">Here\'s our Story:</string>
    <string name="image_description">mad libs logo</string>
    <string name="ok_button">OK</string>
</resources>
